# fsbot-rs

./: Cargo.toml  LICENSE  README.md
src/: ai.rs  app.rs  filesystem.rs  main.rs  ui.rs
